--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -19,12 +19,12 @@ body {
   -ms-user-select: none;
   user-select: none;
   /* cursor: default; */
-  cursor: url("https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png")
+  cursor: url("https://uploads.codesandbox.io/uploads/user/5d709116-a93b-4603-b3e9-0a7324d3fc49/Ad1_-cursor.png")
       39 39,
     auto;
 }
 
 #root {
-  overflow: hidden;
+  /* overflow: hidden; */
   background: #f0f0f0;
 }
